--- a/MC.ipynb
+++ b/MC.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classical Monte Carlo of $S_N$ Model on Hypertree Lattice"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,8 +20,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypertree Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Setup\n",
+    "* Lattice: hypertree (branching MERA like, binary branching and binary merging)\n",
+    "* Degrees of freedom on each site is a permutation group element $g_i\\in S_N$.\n",
+    "* Hamiltonian:\n",
+    "$$H = -\\sum_{\\langle ij\\rangle} K_{ij}\\chi(g_i,g_j),$$\n",
+    "where $\\chi(g_i,g_j)=\\text{Tr}g_i^{-1}g_j$ is the group character (the number of cycles)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -22,16 +48,27 @@
     {
      "data": {
       "text/plain": [
-       "9"
+       "[<2,0,0>,\n",
+       " <2,1,0>,\n",
+       " <2,2,0>,\n",
+       " <2,3,0>,\n",
+       " <1,0,0>,\n",
+       " <1,0,1>,\n",
+       " <1,1,0>,\n",
+       " <1,1,1>,\n",
+       " <0,0,0>,\n",
+       " <0,0,1>,\n",
+       " <0,0,2>,\n",
+       " <0,0,3>]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lattice(8)[(1,0,1)].index"
+    "lattice(4).sites"
    ]
   },
   {
@@ -57,8 +94,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example\n",
+    "Generate model, run, get hist and energy, make measurements.\n",
+    "* use **block Gibbs sampling** + **heatbath update**, alternatively sampling on A and B sublattices.\n",
+    " * A sublattice is the one that contains the most UV layer\n",
+    " * B sublattice contains the rest\n",
+    " * the boundary is labeled by C\n",
+    "* hist and magnetization only conts the bulk spins, boundary spins are not taken into account."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -67,189 +117,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1]\n",
-      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1]\n",
-      "[0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
-      "[0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1]\n"
+      "[0 0 0 0 1 0 0 1 0 0 0 0] [6 2] 5.700000000000001\n",
+      "[0 1 1 1 0 0 1 1 0 0 0 0] [3 5] 1.900000000000001\n",
+      "[1 0 1 0 0 0 1 1 0 0 0 0] [4 4] 3.9000000000000012\n",
+      "[0 1 1 1 0 0 0 1 0 0 0 0] [4 4] 2.8000000000000016\n",
+      "[0 0 0 1 0 0 0 1 0 0 0 0] [6 2] 2.6000000000000014\n",
+      "[0 1 1 0 0 0 1 1 0 0 0 0] [4 4] 2.1000000000000014\n",
+      "[0 1 1 1 0 0 1 1 0 0 0 0] [3 5] 1.9000000000000015\n",
+      "[0 1 1 1 0 0 1 0 0 0 0 0] [4 4] 2.8000000000000016\n",
+      "[1 0 0 0 0 0 0 1 0 0 0 0] [6 2] 4.600000000000001\n",
+      "[0 0 1 1 0 0 1 1 0 0 0 0] [4 4] 1.7000000000000013\n"
      ]
-    }
-   ],
-   "source": [
-    "sys = hypertree_model(4,2,(1.,0.1))\n",
-    "print(list(range(sys.Nsite)))\n",
-    "for step in range(10):\n",
-    "    sys.MCstep()\n",
-    "    print(sys.config)#, sys.energy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmpbklz1_ur'. \n"
-     ]
-    }
-   ],
-   "source": [
-    "def test():\n",
-    "    sys = hypertree_model(128,2,(1.,0.1))\n",
-    "    #energies = []\n",
-    "    for step in range(32):\n",
-    "        sys.MCstep()\n",
-    "        #energies.append(sys.energy())\n",
-    "%snakeviz test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmp3m3zubth'. \n"
-     ]
-    }
-   ],
-   "source": [
-    "def test():\n",
-    "    sys = hypertree_model(128,2,(1.,0.1))\n",
-    "    #energies = []\n",
-    "    for step in range(32):\n",
-    "        sys.MCstep()\n",
-    "        #energies.append(sys.energy())\n",
-    "%snakeviz test()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "%run 'MC.py'\n",
-    "import MC\n",
-    "class model(object):\n",
-    "    def __init__(self):\n",
-    "        MC.core.init()\n",
-    "    def config(self):\n",
-    "        return MC.core.config-1\n",
-    "    def MCstep(self):\n",
-    "        MC.core.MCstep()\n",
-    "class hypertree_model(model):\n",
-    "    def __init__(self, L=0, n=0, Ks=(1.,1.), branches=2):\n",
-    "        # setup the lattice\n",
-    "        latt = lattice(L, branches=branches)\n",
-    "        self.latt = latt\n",
-    "        # setup the permutation group\n",
-    "        grp = group(n)\n",
-    "        self.grp = grp\n",
-    "        dof = grp.order\n",
-    "        # passing data to FORTRAN MC core\n",
-    "        MC.core.dof = dof\n",
-    "        MC.core.Nsite = latt.Nsite\n",
-    "        MC.core.NA, MC.core.NB, MC.core.NC = latt.NA, latt.NB, latt.NC\n",
-    "        # initialize configuration\n",
-    "        MC.core.config = numpy.array([1]*latt.Nsite)\n",
-    "        # chi is adjusted by dof\n",
-    "        MC.core.chi = numpy.array(grp.chi)-dof\n",
-    "        # build Hamiltonian\n",
-    "        H = []\n",
-    "        for a in latt:\n",
-    "            i = a.index # take site a index\n",
-    "            bs = a.IR # get its IR sites\n",
-    "            for b, K in zip(bs, Ks):\n",
-    "                j = b.index # take site b index\n",
-    "                H.append((i,j,K))\n",
-    "                H.append((j,i,K))\n",
-    "        ilst, jlst, Klst = tuple(zip(*sorted(H)))\n",
-    "        MC.core.irng = self.make_irng(ilst)+1\n",
-    "        MC.core.jlst = numpy.array(jlst)+1\n",
-    "        MC.core.Klst = numpy.array(Klst)\n",
-    "        model.__init__(self)\n",
-    "    # convert ilst to irng\n",
-    "    def make_irng(self, ilst):\n",
-    "        imax = 0\n",
-    "        irng = [0]\n",
-    "        for k, i in zip(range(len(ilst)),ilst):\n",
-    "            while i > imax:\n",
-    "                irng.append(k)\n",
-    "                imax += 1\n",
-    "        irng.append(k+1)\n",
-    "        return numpy.array(irng)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int32)"
+       "{'energy1': 2.8957269999997366,\n",
+       " 'energy2': 10.340216499997263,\n",
+       " 'magnet1': array([ 0.6682725,  0.3317275]),\n",
+       " 'magnet2': array([[ 0.4836075,  0.184665 ],\n",
+       "        [ 0.184665 ,  0.1470625]]),\n",
+       " 'spins': array([[ 0.81365,  0.54088,  0.54615,  0.50365],\n",
+       "        [ 0.18635,  0.45912,  0.45385,  0.49635]]),\n",
+       " 'steps': 100000}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sys = hypertree_model(4,2,(1.,0.2))\n",
-    "sys.config()"
+    "sys = hypertree_model(4,2,(1.,0.1)).run(100)\n",
+    "for k in range(10):\n",
+    "    sys.run(mode = 1)\n",
+    "    print(sys.config(),sys.hist(),sys.energy())\n",
+    "sys.measure(100000,monitor=[0,1,2,3])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int32)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "MC.core.MCstep()\n",
-    "MC.core.config"
+    "The CPU intensive MC samplings are performed by the FORTRAN extension MC. The module MC contains two parts:\n",
+    "* core (for MC sampling and update macroscopic observibles)\n",
+    "* physics (for data collection and measurements)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +178,7 @@
       "This module 'MC' is auto-generated with f2py (version:2).\n",
       "Functions:\n",
       "Fortran 90/95 modules:\n",
-      "  core --- config,irng,jlst,dof,Klst,NA,NC,NB,chi,Nsite,init(),MCstep(),dump(),load().\n"
+      "  core --- irng,energy,nsite,config,chi,nc,nb,klst,na,hist,dof,jlst,init(),run(),get_energy(),get_hist(),dump(),load()  physics --- monitor,energy1,magn2,spins,magn1,energy2,measure().\n"
      ]
     }
    ],
@@ -271,70 +188,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "MC.core.config[1]=1"
+    "### Profiling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "MC.core.dump()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0], dtype=int32)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmp9yqe_5z8'. \n"
+     ]
     }
    ],
    "source": [
-    "sys.MCstep()\n",
-    "sys.config()"
+    "%snakeviz hypertree_model(128,4,(1.,0.1)).run(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmpip4uonm9'. \n"
+     ]
     }
    ],
    "source": [
-    "numpy.array([1,2,3])"
+    "def test():\n",
+    "    sys = hypertree_model(128,4,(1.,0.1))\n",
+    "    for k in range(1000):\n",
+    "        sys.run()\n",
+    "%snakeviz test()"
    ]
   },
   {
