--- a/MC.ipynb
+++ b/MC.ipynb
@@ -40,39 +40,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<2,0,0>,\n",
-       " <2,1,0>,\n",
-       " <2,2,0>,\n",
-       " <2,3,0>,\n",
-       " <1,0,0>,\n",
-       " <1,0,1>,\n",
-       " <1,1,0>,\n",
-       " <1,1,1>,\n",
-       " <0,0,0>,\n",
-       " <0,0,1>,\n",
-       " <0,0,2>,\n",
-       " <0,0,3>]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lattice(4).sites"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
@@ -81,7 +48,7 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 1, 2), (0, 2, 1), (1, 0, 2), (1, 2, 0), (2, 0, 1), (2, 1, 0)]"
+       "[<2,0,0>, <2,1,0>, <2,2,0>, <2,3,0>, <1,0,0>, <1,0,1>, <1,1,0>, <1,1,1>, <0,0,0>, <0,0,1>, <0,0,2>, <0,0,3>]"
       ]
      },
      "execution_count": 2,
@@ -90,7 +57,34 @@
     }
    ],
    "source": [
-    "group(3).elements"
+    "HypertreeLattice(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, -1, -1, -2, -2, -1],\n",
+       " [-1, 0, -2, -1, -1, -2],\n",
+       " [-1, -2, 0, -1, -1, -2],\n",
+       " [-2, -1, -1, 0, -2, -1],\n",
+       " [-2, -1, -1, -2, 0, -1],\n",
+       " [-1, -2, -2, -1, -1, 0]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Group(3).chi"
    ]
   },
   {
@@ -108,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -117,42 +111,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 0 0 1 0 0 1 0 0 0 0] [6 2] 5.700000000000001\n",
-      "[0 1 1 1 0 0 1 1 0 0 0 0] [3 5] 1.900000000000001\n",
-      "[1 0 1 0 0 0 1 1 0 0 0 0] [4 4] 3.9000000000000012\n",
-      "[0 1 1 1 0 0 0 1 0 0 0 0] [4 4] 2.8000000000000016\n",
-      "[0 0 0 1 0 0 0 1 0 0 0 0] [6 2] 2.6000000000000014\n",
-      "[0 1 1 0 0 0 1 1 0 0 0 0] [4 4] 2.1000000000000014\n",
-      "[0 1 1 1 0 0 1 1 0 0 0 0] [3 5] 1.9000000000000015\n",
-      "[0 1 1 1 0 0 1 0 0 0 0 0] [4 4] 2.8000000000000016\n",
-      "[1 0 0 0 0 0 0 1 0 0 0 0] [6 2] 4.600000000000001\n",
-      "[0 0 1 1 0 0 1 1 0 0 0 0] [4 4] 1.7000000000000013\n"
+      "[0 2 0 1 0 0 5 1 0 0 0 0] [4 2 1 0 0 1] 5.199999999999999\n",
+      "[0 3 3 3 0 5 1 3 0 0 0 0] [2 1 0 4 0 1] 7.599999999999999\n",
+      "[4 1 3 1 1 0 2 1 0 0 0 0] [1 4 1 1 1 0] 9.999999999999998\n",
+      "[0 2 0 3 0 0 2 0 0 0 0 0] [5 0 2 1 0 0] 3.9999999999999987\n",
+      "[2 0 0 3 0 5 2 2 0 0 0 0] [3 0 3 1 0 1] 9.999999999999996\n",
+      "[0 5 2 2 0 0 3 2 0 0 0 0] [3 0 3 1 0 1] 4.399999999999997\n",
+      "[0 3 2 3 0 0 2 2 0 0 0 0] [3 0 3 2 0 0] 3.5999999999999974\n",
+      "[1 2 2 4 0 0 0 0 0 0 0 0] [4 1 2 0 1 0] 6.799999999999999\n",
+      "[1 2 0 1 4 0 0 0 0 0 0 0] [4 2 1 0 1 0] 8.399999999999999\n",
+      "[0 5 0 5 0 1 5 0 0 0 0 0] [4 1 0 0 0 3] 6.799999999999997\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'energy1': 2.8957269999997366,\n",
-       " 'energy2': 10.340216499997263,\n",
-       " 'magnet1': array([ 0.6682725,  0.3317275]),\n",
-       " 'magnet2': array([[ 0.4836075,  0.184665 ],\n",
-       "        [ 0.184665 ,  0.1470625]]),\n",
-       " 'spins': array([[ 0.81365,  0.54088,  0.54615,  0.50365],\n",
-       "        [ 0.18635,  0.45912,  0.45385,  0.49635]]),\n",
-       " 'steps': 100000}"
+       "{'energy1': 6.492800000000001,\n",
+       " 'energy2': 47.164479999999934,\n",
+       " 'magnet1': array([ 0.416   ,  0.12875 ,  0.141375,  0.08725 ,  0.0875  ,  0.139125]),\n",
+       " 'magnet2': array([[ 0.20721875,  0.04709375,  0.05221875,  0.03079688,  0.0299375 ,\n",
+       "          0.04873438],\n",
+       "        [ 0.04709375,  0.0350625 ,  0.01214063,  0.00970312,  0.009875  ,\n",
+       "          0.014875  ],\n",
+       "        [ 0.05221875,  0.01214063,  0.04076562,  0.01082812,  0.01059375,\n",
+       "          0.01482812],\n",
+       "        [ 0.03079688,  0.00970312,  0.01082812,  0.01996875,  0.0056875 ,\n",
+       "          0.01026563],\n",
+       "        [ 0.0299375 ,  0.009875  ,  0.01059375,  0.0056875 ,  0.02109375,\n",
+       "          0.0103125 ],\n",
+       "        [ 0.04873438,  0.014875  ,  0.01482812,  0.01026563,  0.0103125 ,\n",
+       "          0.04010938]]),\n",
+       " 'spins': array([[ 0.578,  0.252,  0.234,  0.166],\n",
+       "        [ 0.092,  0.162,  0.152,  0.172],\n",
+       "        [ 0.124,  0.167,  0.179,  0.172],\n",
+       "        [ 0.033,  0.127,  0.14 ,  0.162],\n",
+       "        [ 0.037,  0.118,  0.136,  0.161],\n",
+       "        [ 0.136,  0.174,  0.159,  0.167]]),\n",
+       " 'steps': 1000}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sys = hypertree_model(4,2,(1.,0.1)).run(100)\n",
+    "sys = LatticeModel(HypertreeLattice(4,[1.,0.2]),Group(3)).run(100)\n",
     "for k in range(10):\n",
     "    sys.run(mode = 1)\n",
-    "    print(sys.config(),sys.hist(),sys.energy())\n",
-    "sys.measure(100000,monitor=[0,1,2,3])"
+    "    print(sys.config,sys.hist,sys.energy)\n",
+    "sys.measure(1000,monitor=[0,1,2,3])"
    ]
   },
   {
@@ -178,7 +186,7 @@
       "This module 'MC' is auto-generated with f2py (version:2).\n",
       "Functions:\n",
       "Fortran 90/95 modules:\n",
-      "  core --- irng,energy,nsite,config,chi,nc,nb,klst,na,hist,dof,jlst,init(),run(),get_energy(),get_hist(),dump(),load()  physics --- monitor,energy1,magn2,spins,magn1,energy2,measure().\n"
+      "  core --- chi,jlst,klst,nsite,na,dof,nlst,config,nc,irng,energy,nb,hist,init(),run(),get_energy(),get_hist(),dump(),load()  physics --- nspin,spins,energy2,magnet1,monitor,energy1,magnet2,measure().\n"
      ]
     }
    ],
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -206,36 +214,12 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmp9yqe_5z8'. \n"
+      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmp3lqyahqv'. \n"
      ]
     }
    ],
    "source": [
-    "%snakeviz hypertree_model(128,4,(1.,0.1)).run(1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmpip4uonm9'. \n"
-     ]
-    }
-   ],
-   "source": [
-    "def test():\n",
-    "    sys = hypertree_model(128,4,(1.,0.1))\n",
-    "    for k in range(1000):\n",
-    "        sys.run()\n",
-    "%snakeviz test()"
+    "%snakeviz LatticeModel(HypertreeLattice(4,[1.,0.2]),Group(3)).run(1000)"
    ]
   },
   {
