Debug MC.core.get_energy()
* Previously energy is double counted! Now the result is divided by 2
after summation.
* In Hamiltonian of SquareLattice, self.Ks[0] is corrected to K, as zip
has already used to thread over Ks. H.append is also improved to
H.extend.

--- a/MonteCarlo.ipynb
+++ b/MonteCarlo.ipynb
@@ -26,7 +26,7 @@
     "* **Group**: on each site, the degree of freedom is a permutation group element $g_i\\in S_n$, which we will called the \"spin\" hereinafter.\n",
     " * Each spin state will be represented as a vector in the canonical representation of $S_n$. For example, for $S_2$ group: $|()\\rangle=(1,0)^\\intercal$, $|(12)\\rangle=(0,1)^\\intercal.$\n",
     "* **Hamiltonian**:\n",
-    "$$H[g] = -\\sum_{\\langle ij\\rangle} K_{ij}\\chi(g_i,g_j),$$\n",
+    "$$H[g] = -\\sum_{i,j} K_{ij}\\chi(g_i,g_j),$$\n",
     "where $\\chi(g_i,g_j)=\\text{Tr}g_i^{-1}g_j$ is the group character (the number of cycles). The partition function is given by\n",
     "$$Z = -\\sum_{[g|A\\cup B]}e^{-H[g]} = e^{-F[g|C]}.$$\n",
     "With given boundary, the free energy $F$ is a function of the boundary configuration."
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +441,6 @@
     }
    ],
    "source": [
-    "#%run 'MonteCarlo.py'\n",
     "lattice = SquareLattice(4,[1.])\n",
     "for key in ('nsite','na','nb','nc','nlst','irng','jlst','klst'):\n",
     "    print(key,':',vars(lattice)[key])\n",
@@ -703,6 +702,70 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "## Square Lattice Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[154 102] 87.0399999999998\n",
+      "[0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0]\n",
+      "[1 0 1 1 1 1 0 0 0 1 1 0 0 0 0 1]\n",
+      "[1 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      "[1 1 0 0 0 1 1 0 0 0 0 0 0 0 1 0]\n",
+      "[1 1 0 0 1 1 1 0 0 0 0 0 0 1 1 0]\n",
+      "[0 0 0 0 1 1 1 0 0 0 0 0 1 1 0 0]\n",
+      "[1 0 1 1 1 1 0 0 0 0 0 0 1 1 1 0]\n",
+      "[1 0 0 0 1 1 1 1 0 1 0 0 1 1 1 1]\n",
+      "[1 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1]\n",
+      "[1 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1]\n",
+      "[0 0 0 1 1 0 0 0 0 0 1 0 1 1 0 0]\n",
+      "[0 0 1 1 1 1 0 0 0 0 0 0 1 1 0 0]\n",
+      "[1 0 0 0 1 1 0 0 0 0 0 0 0 0 0 1]\n",
+      "[0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
+      "[0 0 1 1 1 1 0 0 0 0 1 0 0 0 0 0]\n",
+      "[0 0 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
+      "energy1 : 100.73536000000092\n",
+      "energy2 : 10235.537489920094\n",
+      "magnet1 : [ 0.49763203  0.50236797]\n",
+      "magnet2 : [[ 0.25678991  0.24084212]\n",
+      " [ 0.24084212  0.26152585]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mdl = LatticeModel(SquareLattice(16,[0.64]),Group(2))\n",
+    "#MC.core.seed(24)\n",
+    "mdl.run(1000)\n",
+    "print(mdl.hist,mdl.energy)\n",
+    "for x in range(mdl.lattice.L):\n",
+    "    print(mdl.config[[mdl.lattice[(x,y)].index for y in range(mdl.lattice.L)]])\n",
+    "mdl.measure(10000)\n",
+    "for key in ('energy1','energy2','magnet1','magnet2'):\n",
+    "    print(key,':',mdl.data[key])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Hypertree Model"
@@ -784,15 +847,6 @@
     "    print(mdl.config,mdl.hist,mdl.energy)\n",
     "mdl.measure(1000,monitor=[0,1,2,3])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
