--- a/MonteCarlo.ipynb
+++ b/MonteCarlo.ipynb
@@ -25,10 +25,10 @@
     " * The **boundary**, labeled by *C*, refers to the sites that will not be updated in Monte Carlo. The boundary configuration is fixed by the boundary condition and will not be updated. \n",
     "* **Group**: on each site, the degree of freedom is a permutation group element $g_i\\in S_n$, which we will called the \"spin\" hereinafter.\n",
     " * Each spin state will be represented as a vector in the canonical representation of $S_n$. For example, for $S_2$ group: $|()\\rangle=(1,0)^\\intercal$, $|(12)\\rangle=(0,1)^\\intercal.$\n",
-    "* **Hamiltonian**:\n",
-    "$$H[g] = -\\sum_{i,j} K_{ij}\\chi(g_i,g_j),$$\n",
+    "* **Action**:\n",
+    "$$S[g] = -\\sum_{\\langle ij\\rangle} K_{ij}\\chi(g_i,g_j),$$\n",
     "where $\\chi(g_i,g_j)=\\text{Tr}g_i^{-1}g_j$ is the group character (the number of cycles). The partition function is given by\n",
-    "$$Z = -\\sum_{[g|A\\cup B]}e^{-H[g]} = e^{-F[g|C]}.$$\n",
+    "$$Z = -\\sum_{[g|A\\cup B]}e^{-S[g]} = e^{-F[g|C]}.$$\n",
     "With given boundary, the free energy $F$ is a function of the boundary configuration."
    ]
   },
@@ -38,7 +38,7 @@
    "source": [
     "### Monte Carlo Algorithm\n",
     "The basic idea of importance sampling is to set up a suitable Markov chain that draws configurations according to the Boltzmann weight\n",
-    "$$P[g] = \\frac{e^{-H[g]}}{Z}.$$\n",
+    "$$P[g] = \\frac{e^{-S[g]}}{Z}.$$\n",
     "There are two classes of update schemes:\n",
     "* Local update algorithms (Metropolis, **Heat-Bath**)\n",
     "* Cluster update algorithms (Swendsen-Wang Cluster, Wolff Cluster)\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +298,7 @@
     "  - `nsite`, `na`, `nb`, `nc`. They must satisfy `na + nb + nc = nsite`.\n",
     "  - `sites` (site container) is a list of all sites in the lattice (including both bulk and boundary).\n",
     "  - `coordmap` is a dictionary that maps the coordinates to the site index.\n",
-    "- Hamiltonian related attributes\n",
+    "- Action related attributes\n",
     "  - `irng` a list of length `nsite+1` to specify the partition of `jlst` and `klst`, s.t. the data block for site `i` is specified by the slice `irng[i]:irng[i+1]`.\n",
     "  - `jlst`, `klst` lists of j-index and corresponding coupling strength K. Both lists are of the length `nlst`.\n",
     "  \n",
@@ -306,7 +306,7 @@
     "\n",
     "Each inheritance lattice clase must redefine the follwing methods:\n",
     "- `get_site()` return a list of all lattice sites (no need to be labeled, sorted or indexed, just create objects).\n",
-    "- `Hamiltonian()` assuming the *lattice has been assembled* (sites labeled, sorted and indexed), return the Hamiltonian terms as `(i,j,K)` tuples, such that $H=-\\sum_{i,j}K_{ij}\\chi(g_i,g_j)$"
+    "- `Action()` assuming the *lattice has been assembled* (sites labeled, sorted and indexed), return the Action terms as `(i,j,K)` tuples, such that $S=-\\frac{1}{2}\\sum_{i,j}K_{ij}\\chi(g_i,g_j)$ (note the 1/2 factor to correct the double counting.)"
    ]
   },
   {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -459,16 +459,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The CPU intensive Monte Carlo samplings are performed by the FORTRAN extension MC. The module MC contains two parts:\n",
-    "* core (for MC sampling and update macroscopic observibles)\n",
-    "* physics (for data collection and measurements)\n",
+    "The Monte Carlo samplings are performed by the FORTRAN extension `MC`. The module `MC` contains two parts:\n",
+    "* **`MC.core`**: *CPU* intensive, for MC sampling and register macroscopic observibles.\n",
+    "* **`MC.data`**: *memory* intensive, for data storage and procession.\n",
     "\n",
     "The `Model` object is a *python wapper* for the `MC` module. Because all `Model` instances shares the same `MC` kernel, so **there must only one active `Model` object at any time**. More than two active `Model` objects will interefer with each other."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -480,7 +480,7 @@
       "This module 'MC' is auto-generated with f2py (version:2).\n",
       "Functions:\n",
       "Fortran 90/95 modules:\n",
-      "  core --- nc,nlst,nsite,chi,irng,nb,dof,klst,energy,config,na,jlst,hist,init(),run(),get_energy(),get_hist(),dump(),load()  physics --- magnet2,nspin,monitor,energy1,energy2,spins,magnet1,measure().\n"
+      "  core --- dof,nb,jlst,nsite,energy,klst,irng,nc,na,nlst,chi,hist,config,init(),seed(),run(),get_energy(),get_hist(),dump(),load()  data --- energy2,energy1,nspin,monitor,magnet1,spins,magnet2,measure().\n"
      ]
     }
    ],
@@ -514,29 +514,34 @@
     "\n",
     "    MC                                                        Model\n",
     "    +- MC.core                                   Model.system[:] -+\n",
-    "    |  +- MC.core.dof                   <==> Model.dof        -+  |\n",
-    "    |  +- MC.core.nsite                 <==> Model.nsite      -+  |\n",
-    "    |  +- MC.core.na                    <==> Model.na         -+  |\n",
-    "    |  +- MC.core.nb                    <==> Model.nb         -+  |\n",
-    "    |  +- MC.core.nc                    <==> Model.nc         -+  |\n",
-    "    |  +- MC.core.nlst                  <==> Model.nlst       -+  |\n",
-    "    |  +- MC.core.chi[:dof,:dof]        <==> Model.chi        -+  |\n",
-    "    |  +- MC.core.irng[:nsite+1]        <==> Model.irng       -+  |\n",
-    "    |  +- MC.core.jlst[:nlst]           <==> Model.jlst       -+  |\n",
-    "    |  +- MC.core.klst[:nlst]           <==> Model.klst       -+  |\n",
+    "    |  +- MC.core.dof                 <==>   Model.dof        -+  |\n",
+    "    |  +- MC.core.nsite               <==>   Model.nsite      -+  |\n",
+    "    |  +- MC.core.na                  <==>   Model.na         -+  |\n",
+    "    |  +- MC.core.nb                  <==>   Model.nb         -+  |\n",
+    "    |  +- MC.core.nc                  <==>   Model.nc         -+  |\n",
+    "    |  +- MC.core.nlst                <==>   Model.nlst       -+  |\n",
+    "    |  +- MC.core.chi[:dof,:dof]      <==>   Model.chi        -+  |\n",
+    "    |  +- MC.core.irng[:nsite+1]      <==>   Model.irng       -+  |\n",
+    "    |  +- MC.core.jlst[:nlst]         <==>   Model.jlst       -+  |\n",
+    "    |  +- MC.core.klst[:nlst]         <==>   Model.klst       -+  |\n",
     "    |  |                                          Model.state[:] -+\n",
-    "    |  +- MC.core.config[:nsite]        <==> Model.config     -+  |\n",
-    "    |  +- MC.core.energy                <==> Model.energy     -+  |\n",
-    "    |  +- MC.core.hist[:dof]            <==> Model.hist       -+  |\n",
-    "    +- MC.physics                                                 |\n",
-    "       +- MC.physics.nspin                                        |\n",
-    "       +- MC.physics.monitor[:nspin]               Model.data[:] -+\n",
-    "       +- MC.physics.energy1            ===> Model.data[energy1]\n",
-    "       +- MC.physics.energy2            ===> Model.data[energy2]\n",
-    "       +- MC.physics.magnet1[:dof]      ===> Model.data[magnet1]\n",
-    "       +- MC.physics.magnet2[:dof,:dof] ===> Model.data[magnet2]\n",
-    "       +- MC.physics.spins[:dof,:nspin] ===> Model.data[spins]\n",
-    "                                             Model.data[steps]       "
+    "    |  +- MC.core.action              <==>   Model.action     -+  |\n",
+    "    |  +- MC.core.beta                <==>   Model.beta       -+  |\n",
+    "    |  +- MC.core.config[:nsite]      <==>   Model.config     -+  |\n",
+    "    |  +- MC.core.hist[:dof]          <==>   Model.hist       -+  |\n",
+    "    +- MC.data                                     Model.data[:] -+  \n",
+    "       +- MC.data.nspin                                        |  |\n",
+    "       +- MC.data.monitor[:nspin]                              |  |\n",
+    "       +- MC.data.energy1            ===> Model.data[energy1] -+  |\n",
+    "       +- MC.data.energy2            ===> Model.data[energy2] -+  |\n",
+    "       +- MC.data.magnet1[:dof]      ===> Model.data[magnet1] -+  |\n",
+    "       +- MC.data.magnet2[:dof,:dof] ===> Model.data[magnet2] -+  |\n",
+    "       +- MC.data.spins[:dof,:nspin] ===>   Model.data[spins] -+  |\n",
+    "       |                                    Model.data[steps] -+  |\n",
+    "       |                                         Model.series[:] -+\n",
+    "       +- MC.data.nser               ===>    Model.nser       -+\n",
+    "       +- MC.data.eser[:nseq]        ===>    Model.eser       -+\n",
+    "       +- Mc.data.mser[:dof,:nseq]   ===>    Model.mser       -+"
    ]
   },
   {
@@ -546,11 +551,13 @@
     "Notes:\n",
     "- The `Model` attributes *do not physically exist*. They are accessed by `getattr` and `setattr` methods. The system and state attributes can be set as a whole by passing the dictionary. The data attributs are read only, setting `Model.data` will not affect the variables in the MC module.\n",
     "- `Model` object provides **state parameter parsing**.\n",
+    "  - `action='unknown','nan'`: set `action` to nan (which is a flag telling MC that the energy has not be calculated yet).\n",
+    "  - `beta='default'`: set `beta` = 1.\n",
     "  - `config='FM','uniform'`: initialize with 0's; `'PM','random'`: initialize with random spins from `range(dof)`.\n",
-    "  - `energy='unknown','nan'`: set `energy` to nan (which is a flag telling MC that the energy has not be calculated yet).\n",
     "  - `hist='unknown'`: set `hist` to empty with `hist[0]=-1` (which is a flag telling MC that the histogram has not been collected yet).\n",
-    "- When attribute getter is called to get `energy` and `hist`, it is first checked whether they have been calculated, if not, will evoke MC module (by calling `MC.core.get_energy()` or `.get_hist()`) to calculate and then return.\n",
-    "- `MC.core.dump()` and `MC.core.load()` can be called to dump/load core variables."
+    "- When attribute getter is called to get `action` and `hist`, it is first checked whether they have been calculated, if not, will evoke MC module (by calling `MC.core.get_action()` or `.get_hist()`) to calculate and then return.\n",
+    "- `MC.core.dump()` and `MC.core.load()` can be called to dump/load core variables.\n",
+    "- `MC.core.seed(x)` seed the random number generator by `x`."
    ]
   },
   {
@@ -560,13 +567,13 @@
     "#### Methods\n",
     "\n",
     "`Model.run(steps, mode)` runs the MC updates for specific `steps`, under the `mode`:\n",
-    "- `mode = 0` (default): update without keeping track of the `energy` and `hist`.\n",
-    "- `mode = 1`: `energy` and `hist` are updated with the MC run at every spin flip.\n",
+    "- `mode = 0` (default): update without keeping track of the `action` and `hist`.\n",
+    "- `mode = 1`: `action` and `hist` are updated with the MC run at every spin flip.\n",
     "\n",
     "`Model.measure(step, monitor)` runs MC updates for specific `steps`, and returns the measurement on the samples of:\n",
-    "- energy 1st and 2nd moment: $\\langle E\\rangle$, $\\langle E^2\\rangle$\n",
-    "- total magnetization 1st and 2nd moment: $\\langle M\\rangle$, $\\langle M^2\\rangle$ (where $M=N_{A\\cup B}^{-1}\\sum_{i\\in A\\cup B} g_i$ and $g_i$ is represented as a vector in the canonical representation).\n",
-    "  - the 2nd moment $\\langle M^2\\rangle$ is a matrix, containing infomations of cross correlation.\n",
+    "- energy density 1st and 2nd moment: $\\langle e\\rangle$, $\\langle e^2\\rangle$ (where $e=S/(\\beta N)$ is the energy density over all sites including the boundary).\n",
+    "- magnetization density 1st and 2nd moment: $\\langle m\\rangle$, $\\langle m^2\\rangle$ (where $m=N_{A\\cup B}^{-1}\\sum_{i\\in A\\cup B} g_i$ and $g_i$ is represented as a vector in the canonical representation).\n",
+    "  - the 2nd moment $\\langle m^2\\rangle$ is a matrix, containing infomations of cross correlation.\n",
     "- specific spins (averged over samples), spin indices are specified by <code>monitor</code>, and the number of spin to monitor is specified by <code>nspin</code>.\n",
     "- the number of steps (samples) is also returned, such that the data can be combined with previous measurements properly, as weighted by the number of samples."
    ]
@@ -604,9 +611,7 @@
    "source": [
     "In each step (sweep) of MC sampling, the *entire bulk is updated* (which contains two block Gibbs sampling: A-given-B and B-given-A). Measurements are made after the bulk update, so the measurement time is neglegable. For one MC step, the complexity depends on:\n",
     "- $N$ - the number of bulk sites.\n",
-    "- $n!$ - group order (onsite degrees of freedom).\n",
-    "\n",
-    "Total time estimation: $N(12 n! + 6\\log(n!) + 16)$ ns (CPU: 3GHz Intel Core i7)"
+    "- $n!$ - group order (onsite degrees of freedom)."
    ]
   },
   {
@@ -614,14 +619,14 @@
    "metadata": {},
    "source": [
     "<table align=\"left\">\n",
-    "<tr><td>procedure</td><td>complexity</td><td>time (ns)</td></tr>\n",
-    "<tr><td><code>RAND_NUMBER</code></td><td>$N$</td><td>13.8</td></tr>\n",
-    "<tr><td><code>SET_BLOCK</code></td><td>~$Nn!$</td><td>12.1</td></tr>\n",
-    "<tr><td><code>    SET_BIAS</code></td><td>$Nn!$</td><td>2.3</td></tr>\n",
-    "<tr><td><code>    SET_WEIGHT</code></td><td>$Nn!$</td><td>9.8</td></tr>\n",
-    "<tr><td><code>        EXP</code></td><td>$Nn!$</td><td>8.0</td></tr>\n",
-    "<tr><td><code>    RND</code></td><td>$N$</td><td>2.1</td></tr>\n",
-    "<tr><td><code>CHOOSE</code></td><td>$N\\log(n!)$</td><td>5.6</td></tr>\n",
+    "<tr><td>procedure</td><td>complexity</td><td>time<sup>1</sup>(ns)</td><td>time<sup>2</sup>(ns)</td></tr>\n",
+    "<tr><td><code>RAND_NUMBER</code></td><td>$N$</td><td>5.0</td><td>13.8</td></tr>\n",
+    "<tr><td><code>SET_BLOCK</code></td><td>~$Nn!$</td><td>8.8</td><td>12.1</td></tr>\n",
+    "<tr><td><code>    SET_BIAS</code></td><td>$Nn!$</td><td>1.3</td><td>2.3</td></tr>\n",
+    "<tr><td><code>    SET_WEIGHT</code></td><td>$Nn!$</td><td>7.5</td><td>9.8</td></tr>\n",
+    "<tr><td><code>        EXP</code></td><td>$Nn!$</td><td>6.7</td><td>8.0</td></tr>\n",
+    "<tr><td><code>    RND</code></td><td>$N$</td><td>2.1</td><td>2.1</td></tr>\n",
+    "<tr><td><code>CHOOSE</code></td><td>$N\\log(n!)$</td><td>5.0</td><td>5.6</td></tr>\n",
     "</table>"
    ]
   },
@@ -632,8 +637,16 @@
     "Average update time per spin scales with $n$ as:\n",
     "<table align=\"left\">\n",
     "<tr><td>$n=$</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td></tr>\n",
-    "<tr><td>time(μs)</td><td>0.056</td><td>0.12</td><td>0.35</td><td>1.52</td><td>9.06</td></tr>\n",
+    "<tr><td>time<sup>1</sup>(μs)</td><td>0.049</td><td>0.10</td><td>0.27</td><td>1.10</td><td>7.1</td></tr>\n",
+    "<tr><td>time<sup>2</sup>(μs)</td><td>0.056</td><td>0.12</td><td>0.35</td><td>1.52</td><td>9.1</td></tr>\n",
     "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CPU: 3GHz Intel Core i7. time<sup>1</sup>: *single* precision real (32bit), time<sup>2</sup>: *double* precision real (64bit)"
    ]
   },
   {
@@ -645,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -655,13 +668,14 @@
      "output_type": "stream",
      "text": [
       " \n",
-      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmpvg_g9b7o'. \n"
+      "*** Profile stats marshalled to file '/var/folders/lt/kgph6qbj6y306pfhbyd1kn2r0000gn/T/tmphhjwo7yx'. \n"
      ]
     }
    ],
    "source": [
     "%reload_ext snakeviz\n",
-    "%snakeviz LatticeModel(HypertreeLattice(128,[0.75,0.25]),Group(2)).run(10000,0)"
+    "%run 'MonteCarlo.py'\n",
+    "%snakeviz LatticeModel(SquareLattice(100,[0.72]),Group(3)).run(1000,0)"
    ]
   },
   {
@@ -718,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -727,36 +741,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[154 102] 87.0399999999998\n",
-      "[0 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0]\n",
-      "[1 0 1 1 1 1 0 0 0 1 1 0 0 0 0 1]\n",
-      "[1 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      "[1 1 0 0 0 1 1 0 0 0 0 0 0 0 1 0]\n",
-      "[1 1 0 0 1 1 1 0 0 0 0 0 0 1 1 0]\n",
-      "[0 0 0 0 1 1 1 0 0 0 0 0 1 1 0 0]\n",
-      "[1 0 1 1 1 1 0 0 0 0 0 0 1 1 1 0]\n",
-      "[1 0 0 0 1 1 1 1 0 1 0 0 1 1 1 1]\n",
-      "[1 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1]\n",
-      "[1 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1]\n",
-      "[0 0 0 1 1 0 0 0 0 0 1 0 1 1 0 0]\n",
-      "[0 0 1 1 1 1 0 0 0 0 0 0 1 1 0 0]\n",
-      "[1 0 0 0 1 1 0 0 0 0 0 0 0 0 0 1]\n",
-      "[0 0 1 1 1 1 0 0 0 0 0 0 0 0 0 0]\n",
-      "[0 0 1 1 1 1 0 0 0 0 1 0 0 0 0 0]\n",
-      "[0 0 1 1 1 1 1 1 1 1 0 0 0 0 0 0]\n",
-      "energy1 : 100.73536000000092\n",
-      "energy2 : 10235.537489920094\n",
-      "magnet1 : [ 0.49763203  0.50236797]\n",
-      "magnet2 : [[ 0.25678991  0.24084212]\n",
-      " [ 0.24084212  0.26152585]]\n"
+      "[67 33] 68.00\n",
+      "[0 0 1 1 1 1 0 0 0 0]\n",
+      "[0 0 0 1 0 1 0 0 0 1]\n",
+      "[1 0 0 0 0 1 1 0 1 1]\n",
+      "[0 0 0 0 0 1 1 1 0 1]\n",
+      "[0 0 0 0 0 0 1 1 0 0]\n",
+      "[0 0 0 0 1 1 1 1 0 1]\n",
+      "[0 0 0 0 0 0 0 0 0 0]\n",
+      "[1 0 0 0 1 0 1 0 1 0]\n",
+      "[0 0 1 1 1 1 0 0 0 0]\n",
+      "[0 0 0 1 1 0 0 0 0 0]\n",
+      "energy1 : 0.5524380207061768\n",
+      "energy2 : 0.31614381074905396\n",
+      "magnet1 : [ 0.48172837  0.51827192]\n",
+      "magnet2 : [[ 0.26830018  0.21343513]\n",
+      " [ 0.21343513  0.3048453 ]]\n"
      ]
     }
    ],
    "source": [
-    "mdl = LatticeModel(SquareLattice(16,[0.64]),Group(2))\n",
+    "mdl = LatticeModel(SquareLattice(10,[1.]),Group(2))\n",
     "#MC.core.seed(24)\n",
-    "mdl.run(1000)\n",
-    "print(mdl.hist,mdl.energy)\n",
+    "mdl.beta = 0.7\n",
+    "mdl.run(1000,1)\n",
+    "print(mdl.hist,'%0.2f'%(mdl.action/mdl.beta))\n",
     "for x in range(mdl.lattice.L):\n",
     "    print(mdl.config[[mdl.lattice[(x,y)].index for y in range(mdl.lattice.L)]])\n",
     "mdl.measure(10000)\n",
@@ -781,7 +790,7 @@
     "  - A sublattice is the one that contains the most UV layer\n",
     "  - B sublattice contains the rest\n",
     "  - the boundary is labeled by C\n",
-    "- energy is calculated for all sites including the boundary spins.\n",
+    "- energy density is calculated for all sites including the boundary spins.\n",
     "- hist and magnetization only conts the bulk spins, boundary spins are not taken into account."
    ]
   },
